# pinecone-cli

./: LICENSE  README.md  pinecli.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: codecov.yml  pub.yml  python-publish.yml  semgrep.yml
tests/: test.py
