[metadata]
name = pinecone_cli
version = 1.1
author = Tim Tully
author_email = tim@menlovc.com
url = https://github.com/tullytim/pinecone_cli
description = pinecone_cli is a command-line client for interacting with the pinecone vector embedding database.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Pinecone, vectors, embeddings, indexes, vector databases, llm, machine learning
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    click
    numpy
    openai
    pinecone-client
    pinecone-client[gps]
    matplotlib
    scikit-learn
    beautifulsoup4
    nltk
    retry
    rich
    python-dotenv
    typer
    typing
[options.entry_points]
console_scripts = 
    pinecli = pinecli:cli
